--- a/app/src/main/res/layout/activity_bedroom.xml
+++ b/app/src/main/res/layout/activity_bedroom.xml
@@ -121,7 +121,7 @@
         app:sweepAngle="300"
         app:thumb="@drawable/ic_thumb_arc"
         app:touchInside="true"
-        tools:progress="220" />
+        app:progress="220" />
 
     <TextView
         android:id="@+id/tvDanfossTemperature"
