--- a/app/src/main/res/layout/activity_kitchen.xml
+++ b/app/src/main/res/layout/activity_kitchen.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/architects_daughter"
+        android:fontFamily="@font/lobster"
         android:text="@string/title_bedroom"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
@@ -45,6 +45,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvKitchenName" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rect_white_rounded_corners"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/evLight"
+        app:layout_constraintEnd_toEndOf="@id/evLight"
+        app:layout_constraintStart_toStartOf="@id/evLight"
+        app:layout_constraintTop_toTopOf="@id/evLight" />
+
     <com.chernysh.smarthome.presentation.widget.ElectronicElementView
         android:id="@+id/evLight"
         android:layout_width="0dp"
@@ -52,6 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,20 +79,21 @@
         android:layout_marginEnd="32dp"
         android:padding="30dp"
         app:arcColor="@color/textSecondary"
-        app:arcWidth="2dp"
+        app:arcWidth="4dp"
         app:layout_constraintBottom_toTopOf="@id/evLight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
         app:max="400"
+        app:progressWidth="6dp"
         app:progressColor="@color/colorPrimary"
         app:rotation="180"
         app:roundEdges="true"
         app:startAngle="30"
         app:sweepAngle="300"
-        app:thumb="@drawable/arc_thumb_bg"
+        app:thumb="@drawable/ic_thumb_arc"
         app:touchInside="true"
-        tools:progress="220" />
+        app:progress="220" />
 
     <TextView
         android:id="@+id/tvDanfossTemperature"
