--- a/app/src/main/res/layout/activity_living_room.xml
+++ b/app/src/main/res/layout/activity_living_room.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@color/windowBackground">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/windowBackground">
 
     <TextView
         android:id="@+id/tvLivingRoomName"
@@ -45,6 +45,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLivingRoomName" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rect_white_rounded_corners"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="@id/evRozette"
+        app:layout_constraintStart_toStartOf="@id/evRozette"
+        app:layout_constraintTop_toTopOf="@id/evRozette" />
+
     <com.chernysh.smarthome.presentation.widget.ElectronicElementView
         android:id="@+id/evRozette"
         android:layout_width="0dp"
@@ -53,6 +64,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/white_rounded_rect_bg"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,20 +77,21 @@
         android:layout_gravity="center"
         android:padding="30dp"
         app:arcColor="@color/textSecondary"
-        app:arcWidth="2dp"
+        app:arcWidth="4dp"
         app:layout_constraintBottom_toTopOf="@id/evRozette"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
         app:max="400"
+        app:progress="220"
         app:progressColor="@color/colorPrimary"
+        app:progressWidth="6dp"
         app:rotation="180"
         app:roundEdges="true"
         app:startAngle="30"
         app:sweepAngle="300"
-        app:thumb="@drawable/arc_thumb_bg"
-        app:touchInside="true"
-        tools:progress="220" />
+        app:thumb="@drawable/ic_thumb_arc"
+        app:touchInside="true" />
 
     <TextView
         android:id="@+id/tvDanfossTemperature"
