--- a/app/src/main/res/layout/layout_element.xml
+++ b/app/src/main/res/layout/layout_element.xml
@@ -27,6 +27,7 @@
         android:id="@+id/switchElement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivElementIcon" />
