--- a/app/src/main/res/layout/layout_temperature_humidity.xml
+++ b/app/src/main/res/layout/layout_temperature_humidity.xml
@@ -43,13 +43,11 @@
             android:id="@+id/viewTemperatureContainerDivider"
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@color/textSecondaryLight"
-            app:layout_constraintBottom_toTopOf="@id/tvSocketError"
+            app:layout_constraintBottom_toBottomOf="@id/tvCurrentTemperatureValue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/tvCurrentTemperatureValue" />
 
         <TextView
             android:id="@+id/tvCurrentTemperatureValue"
